integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_nft_mix-only-non-fungible.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "total": 1,
  "limit": 1000,
  "cursor": "DSejbjAmQFQtNk9vFqn6abTnPbSoENfkHCs6KU7j6swu",
  "items": [
    {
      "interface": "Custom",
      "id": "DSejbjAmQFQtNk9vFqn6abTnPbSoENfkHCs6KU7j6swu",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://arweave.net/ZMRAYVr6jtOx1z56WKw88mxuN8lJptnPhu2zWWlTvw4",
        "files": [],
        "metadata": {
          "name": "Raging Ape Gang #6",
          "symbol": "GAPES"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "By9r2TCyDN9KmtxXKsvmiz86fmNsjXerH7mqiZJLfrj8",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.1,
        "basis_points": 1000,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "Be9fRwoZxRVZLm1VNezvk25vZhjAqGtAxP6hw3r6GK51",
          "share": 0,
          "verified": true
        },
        {
          "address": "GkuN4Rjsw21zmp3EPTwH7rQLXdN2kZMM1My7acJ6QpBc",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "4PjhNVPBizDhsfAZnkyVZCWkrNhwM1q4GdcbJHtKWKpB"
      },
      "supply": null,
      "mutable": true,
      "burnt": false
    }
  ]
}
