integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_show_zero_balance-search-assets-all-show-zero-balance.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "total": 2,
  "limit": 1000,
  "cursor": "CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "G7rwEgk8KgQ4RUTnMy2W2i7dRDq4hXHD4CSp9PSmSbRW",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "5aZZ4duJUKiMsJN9vRsoAn4SDX7agvKu7Q3QdFWRfWze"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "transfer_fee_config": {
          "withheld_amount": 23901538225105318,
          "newer_transfer_fee": {
            "epoch": 521,
            "maximum_fee": 500000000000000,
            "transfer_fee_basis_points": 300
          },
          "older_transfer_fee": {
            "epoch": 521,
            "maximum_fee": 500000000000000,
            "transfer_fee_basis_points": 300
          },
          "withdraw_withheld_authority": "CHADgm44ttPTudJiSpiTXBoq4wg1GsKqxt7Lp2k4bgVg",
          "transfer_fee_config_authority": "CHADgm44ttPTudJiSpiTXBoq4wg1GsKqxt7Lp2k4bgVg"
        },
        "default_account_state": {
          "state": 1
        }
      },
      "token_info": {
        "balance": 5000350000000,
        "supply": 399841978515441061,
        "decimals": 9,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "associated_token_address": "hXP4faomdmra3hP6b96tVKSeCvfCigE4QCkMXnCY7Wz"
      }
    },
    {
      "interface": "FungibleToken",
      "id": "CKfatsPMUf8SkiURsDXs7eK6GWb4Jsd6UDbs7twMCWxo",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "5aZZ4duJUKiMsJN9vRsoAn4SDX7agvKu7Q3QdFWRfWze"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "transfer_fee_config": {
          "withheld_amount": 12369235,
          "newer_transfer_fee": {
            "epoch": 457,
            "maximum_fee": 3906250000000000000,
            "transfer_fee_basis_points": 690
          },
          "older_transfer_fee": {
            "epoch": 455,
            "maximum_fee": 3906250000000000000,
            "transfer_fee_basis_points": 0
          },
          "withdraw_withheld_authority": "7MyTjmRygJoCuDBUtAuSugiYZFULD2SWaoUTmtjtRDzD",
          "transfer_fee_config_authority": "7MyTjmRygJoCuDBUtAuSugiYZFULD2SWaoUTmtjtRDzD"
        }
      },
      "token_info": {
        "balance": 0,
        "supply": 99221766408288,
        "decimals": 5,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "associated_token_address": "3VUYGjYktCzNhDVymNb3Z1iHewtfPFRvdA53qSWuxdXy"
      }
    }
  ]
}
