integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_show_zero_balance-search-assets-base.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "total": 0,
  "limit": 1000,
  "items": []
}
